--- a/kell.cabal
+++ b/kell.cabal
@@ -3,21 +3,23 @@ cabal-version:       2.4
 --  further documentation, see http://haskell.org/cabal/users-guide/
 
 name:                kell
-version:             0.1.0.0
+version:             0.0.1.0
 -- synopsis:
 -- description:
 -- bug-reports:
--- license:
+license:             apache2
 license-file:        LICENSE
 author:              Martin Erhardt
 maintainer:          martin.erhardt.tu@gmail.com
--- copyright:
--- category:
+--copyright:           Apache2
+category:            Shell
 extra-source-files:  CHANGELOG.md
 
 executable kell
   main-is:             kell.hs
   other-modules:       Exec, TokParser, Lexer
+  ghc-options:         -O2
+                       -threaded
   -- other-extensions:
   build-depends:       base ^>=4.14.1.0, text^>=1.2.4.1, Stack^>=0.4.0, parsec ^>=3.1.14.0, containers ^>=0.6.2.1, transformers ^>=0.5.6.2, unix ^>=2.7.2.2
   -- hs-source-dirs:
