--- a/kell.cabal
+++ b/kell.cabal
@@ -7,7 +7,7 @@ version:             0.0.1.0
 -- synopsis:
 -- description:
 -- bug-reports:
-license:             apache2
+license:             Apache-2.0
 license-file:        LICENSE
 author:              Martin Erhardt
 maintainer:          martin.erhardt.tu@gmail.com
