--- a/kell.cabal
+++ b/kell.cabal
@@ -19,8 +19,14 @@ executable kell
   main-is:             kell.hs
   other-modules:       ShCommon, ExpArith, WordExp, Lexer, TokParser, Exec
   ghc-options:         -O2
-                       -threaded
-  -- other-extensions:
+  other-extensions:    TupleSections
   build-depends:       base ^>=4.14.1.0, text^>=1.2.4.1, Stack^>=0.4.0, parsec ^>=3.1.14.0, containers ^>=0.6.2.1, transformers ^>=0.5.6.2, unix ^>=2.7.2.2
-  -- hs-source-dirs:
+  hs-source-dirs:      src
+  default-language:    Haskell2010
+
+test-suite test
+  type:                exitcode-stdio-1.0
+  main-is:             ShellTest.hs
+  hs-source-dirs:      test
+  build-depends:       base, test-framework-hunit, test-framework, directory, process, HUnit
   default-language:    Haskell2010
