--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -38,7 +38,7 @@ jobs:
         cabal update
         cabal build --only-dependencies --enable-tests --enable-benchmarks
     - name: install
-        cabal install --installdir $pwd --install-method=copy --overwrite-policy=always
+        cabal install --installdir $PWD --install-method=copy --overwrite-policy=always
     - name: Build
       run: cabal build --enable-tests --enable-benchmarks all
     - name: Run tests
