--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -40,6 +40,8 @@ jobs:
     - name: Build
       run: cabal build --enable-tests --enable-benchmarks all
     - name: Install
-      run: cabal install --installdir $PWD --install-method=copy --overwrite-policy=always
+      run: |
+        echo $PWD
+        cabal install --installdir $PWD --install-method=copy --overwrite-policy=always
     - name: Run tests
       run: cabal test all
