--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -43,7 +43,8 @@ jobs:
       run: |
         echo $PWD
         cabal install --installdir $PWD --install-method=copy --overwrite-policy=always
+    - name: Run tests
+      run: |
         ls -l
         chmod +x kell
-    - name: Run tests
-      run: cabal test all
+        cabal test all
