--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -41,11 +41,7 @@ jobs:
       run: cabal build --enable-tests --enable-benchmarks all
     - name: Install
       run: |
-        echo $PWD
-        cabal install --installdir $PWD --install-method=copy --overwrite-policy=always
+        cabal install --overwrite-policy=always # --installdir $PWD --install-method=copy --overwrite-policy=always
     - name: Run tests
       run: |
-        ls -la
-        echo "user: $(whoami)"
-        chmod +x kell
         cabal test all
