--- a/kell.cabal
+++ b/kell.cabal
@@ -20,7 +20,7 @@ executable kell
   other-modules:       ShCommon, ExpArith, WordExp, Lexer, TokParser, Exec
   ghc-options:         -O2 -j
   other-extensions:    TupleSections
-  build-depends:       base ^>=4.14.1.0, text^>=1.2.4.1, Stack^>=0.4.0, parsec ^>=3.1.14.0, containers ^>=0.6.2.1,transformers-either ^>=0.1.2, transformers ^>=0.5.6.2, unix ^>=2.7.2.2
+  build-depends:       base >=4.14.1.0, text^>=1.2.4.1, Stack^>=0.4.0, parsec ^>=3.1.14.0, containers ^>=0.6.2.1,transformers-either ^>=0.1.2, transformers ^>=0.5.6.2, unix ^>=2.7.2.2
   hs-source-dirs:      src
   default-language:    Haskell2010
 
