--- a/kell.cabal
+++ b/kell.cabal
@@ -17,10 +17,10 @@ extra-source-files:  CHANGELOG.md
 
 executable kell
   main-is:             kell.hs
-  other-modules:       ShCommon, ExpArith, WordExp, Lexer, TokParser, Exec
+  other-modules:       ShCommon, ExpArith, WordExp, Lexer, TokParser, Exec, Patterns
   ghc-options:         -O2 -j
   other-extensions:    TupleSections
-  build-depends:       base >=4.14.1.0, text^>=1.2.4.1, Stack^>=0.4.0, parsec ^>=3.1.14.0, containers ^>=0.6.2.1, transformers ^>=0.6.0.4, unix ^>=2.7.2.2
+  build-depends:       base >=4.14.1.0, text^>=1.2.4.1, Stack^>=0.4.0, parsec ^>=3.1.14.0, containers ^>=0.6.2.1, transformers ^>=0.6.0.4, unix ^>=2.7.2.2, directory^>=1.3.6.0, regex-tdfa^>=1.3.2
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -29,4 +29,4 @@ test-suite test
   main-is:             ShellTest.hs
   hs-source-dirs:      test
   build-depends:       base, test-framework-hunit, test-framework, directory, process, HUnit
-  default-language:    Haskell2010
+  default-language:    Haskell2010 
