--- a/kell.cabal
+++ b/kell.cabal
@@ -18,7 +18,7 @@ extra-source-files:  CHANGELOG.md
 executable kell
   main-is:             kell.hs
   other-modules:       ShCommon, ExpArith, WordExp, Lexer, TokParser, Exec, Patterns, OpenAI
-  ghc-options:         -O2 -j
+  ghc-options:         -O2 -j -fprint-potential-instances
   other-extensions:    TupleSections
   build-depends:       base >=4, text^>=1.2.4.1, Stack^>=0.4.0, parsec ^>=3.1.14.0, containers ^>=0.6.2.1, transformers ^>=0.6.0.4, unix ^>=2.7.2.2, directory^>=1.3.6.0, regex-tdfa^>=1.3.1.2, http-conduit ^>= 2.3.8, aeson ^>= 2.1.1.0, bytestring ^>= 0.11.3.1
   hs-source-dirs:      src
