setRequestBearerAuth needs http-client-0.7.6
src/OpenAI.hs:12:5: error:
    Module ‘Network.HTTP.Simple’ does not export ‘setRequestBearerAuth’
   |
12 |     setRequestBearerAuth,
   |     ^^^^^^^^^^^^^^^^^^^^

--- a/kell.cabal
+++ b/kell.cabal
@@ -32,6 +32,7 @@ executable kell
                        bytestring,
                        containers,
                        directory,
+                       http-client >= 0.7.6,
                        http-conduit >= 2.3.8,
                        parsec,
                        regex-tdfa,
